diagnostic/lib/error_messages.txt
build.zig:18:18: error:
no field or member function
  sig:
    let first Int
    let second Int
    let third Int
in another one
  Fun(Int) sig:
    first Int
    second Int
failed to subtype these two types
   |
18 |    const lib = b.addStaticLibrary(.{
   |
                ^^~~~~~~~~~~~~~~~~
/home/brian/.cache/zig/p/N-V-__8AANeVhBSiRwesZrZKZ1hTkJd-goYzJWpN6kwXi-FJ/lib/std/Build.zig:1:1: note: struct declared here
const std = @import("std.zig");
^~~~~
build.zig:18:18: note: method invocation only supports up to one level of implicit pointer dereferencing
build.zig:18:18: note: use '.*' to dereference pointer


src/main.zig:18:26: error: expected type 'i32', found 'bool'
    try list.append(gpa, true);
                         ^~~~
/home/brian/.cache/zig/p/N-V-__8AANeVhBSiRwesZrZKZ1hTkJd-goYzJWpN6kwXi-FJ/lib/std/array_list.zig:893:58: note: parameter type declared here
        pub fn append(self: *Self, gpa: Allocator, item: T) Allocator.Error!void {
                                                         ^
src/main.zig:27:22: error: type 'u32' does not support struct initialization syntax
            .first = true,
                     ^~~~
src/main.zig:38:26: error: expected type 'i32', found 'bool'
    try list.append(gpa, true);
                         ^~~~
/home/brian/.cache/zig/p/N-V-__8AANeVhBSiRwesZrZKZ1hTkJd-goYzJWpN6kwXi-FJ/lib/std/array_list.zig:893:58: note: parameter type declared here
        pub fn append(self: *Self, gpa: Allocator, item: T) Allocator.Error!void {
                                                